cover photo fix on mobile

--- a/apsc-collab-css/partials/_layout.scss
+++ b/apsc-collab-css/partials/_layout.scss
@@ -209,8 +209,8 @@ h1 {
     margin: 0 auto;
     @media only screen and (max-width: $break-tablet) {
         height: 200px;
-        margin-left: -20px;
-        margin-right: -20px;
+        // margin-left: -20px;
+        // margin-right: -20px;
     }    
 }
 
